Fixed ugly issue with arrow drawing on Firefox mobile

--- a/tools/mobileExperience/tool.css
+++ b/tools/mobileExperience/tool.css
@@ -154,10 +154,6 @@ body.lichessTools.mobile main div.rcontrols .fbt {
   padding: 0.1em 1.2em;
 }
 
-body.lichessTools.mobile main div.rcontrols .board-menu-toggle-btn {
-  margin-left: 1.2em;
-}
-
 body.lichessTools.mobile.playing.lichessTools-lockBoard {
   overflow-y: hidden;
   touch-action: pan-x pan-y;
